# etl_produtos_vendas_entregas_arquivos_json

./: README.md  etl.py  pipeline.py  pyproject.toml
