[project]
name = "etl-produtos-vendas-entregas-arquivos-json"
version = "0.1.0"
description = ""
authors = [
    {name = "rafaelporfiriobarros",email = "rafaporfirio.barros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandera (>=0.23.0,<0.24.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
